@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-19T16:19:30Z",
-  "count" : 4,
-  "count_minmax" : [ 3, 4 ],
-  "count_decinc" : [ -0, +4 ],
+  "timestamp" : "2022-11-20T01:22:35Z",
+  "count" : 5,
+  "count_minmax" : [ 3, 5 ],
+  "count_decinc" : [ -0, +5 ],
   "uniques" : 4,
   "uniques_minmax" : [ 3, 4 ],
   "uniques_decinc" : [ -0, +4 ]
