@@ -1,12 +1,7 @@
 {
-  "count": 26,
-  "uniques": 7,
+  "count": 23,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2022-11-05T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-11-12T00:00:00Z",
       "count": 4,
@@ -44,7 +39,7 @@
     },
     {
       "timestamp": "2022-11-19T00:00:00Z",
-      "count": 4,
+      "count": 5,
       "uniques": 4
     }
   ]
