@@ -1,3 +1,11 @@
+2022-11-20T01:22:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3505934074 # 1044
+* notice: last 14d: unq all: 6 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 379 666 / 392 692
+* notice: next accum: outdated-unq outdated-all / unq all: 380 670 / 392 693
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +4 +5 -0 -0 / 4 5
+* notice: removed / changed dates: [2022-11-05] / [2022-11-19]
+
 2022-11-19T16:19:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3504244404 # 1043
 * notice: last 14d: unq all: 7 26
